update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://meganemcclure.github.io/ivyloulou-website",
+  "homepage": "/ivyloulou-website/#",
   "name": "ivyloulou-website",
   "version": "0.1.0",
   "private": true,
