--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://meganemcclure.github.io/ivyloulou-website",
   "name": "ivyloulou-website",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
