--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
-    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
